# Argus

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
argus/: config.py  di.py
config/: config.yaml
data/repos/argus/: .gitignore  Dockerfile  pyproject.toml
data/repos/argus/.superpowers/sdd/: progress.md
data/repos/argus/argus/: config.py
data/repos/argus/argus/implementations/code_search/: local_searcher.py
data/repos/argus/argus/implementations/event_bus/: redis_bus.py
data/repos/argus/argus/implementations/llm/: __init__.py  openai_client.py
data/repos/argus/argus/implementations/owner/: __init__.py  github_resolver.py
data/repos/argus/argus/interfaces/: log_source.py  notifier.py  owner_resolver.py
data/repos/argus/argus/models/: __init__.py
data/repos/argus/argus/services/: __init__.py  feedback.py
data/repos/argus/docs/: orch.mmd  overview-buggy.mmd  overview.mmd  owner.mmd  rca.mmd
data/repos/argus/docs/superpowers/plans/: 2026-06-28-mvp-implementation.md
data/repos/argus/docs/superpowers/specs/: 2026-06-28-tech-selection-design.md
data/repos/argus/tests/integration/: test_pipeline.py
data/repos/argus/tests/unit/: test_di.py
data/repos/argus/tests/unit/implementations/: test_fingerprinter.py  test_redis_bus.py
data/repos/argus/tests/unit/interfaces/: test_protocols.py
data/repos/argus/tests/unit/models/: test_event.py
data/repos/argus/tests/unit/services/: test_feedback.py  test_rca_agent.py
data/repos/argus/web/: app.py
docs/: architecture.html  code-review.md  flow.mmd  implementation-analysis.md
(+35 files in other folders)
