[project]
name = "argus"
version = "0.1.0"
description = "Log Anomaly Intelligent Remediation Middle Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "openai>=1.55.0",
    "arq>=0.26.0",
    "redis>=5.1.0",
    "asyncpg>=0.30.0",
    "gitpython>=3.1.0",
    "tree-sitter>=0.23.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "fakeredis>=2.25.0",
    "aiosmtpd>=1.4.0",
]

[tool.setuptools.packages.find]
include = ["argus*", "web*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
